Do not configure default route in SDN template
With the custom route present, virtualbox provider
will not provide external connectivity.
So, just do not configure default route for SDN
template and use existing one, which is normally
via the eth0 interface of solar-dev* nodes.

Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/templates/nodes_network.yaml
+++ b/templates/nodes_network.yaml
@@ -60,7 +60,7 @@ resources:
             vendor_specific:
               phy_interfaces:
               - eth3
-            gateway: 10.2.0.1
+            #gateway: 10.2.0.1
         roles:
           management: br-mgmt
           neutron/mesh: br-mesh
@@ -125,7 +125,7 @@ resources:
             vendor_specific:
               phy_interfaces:
               - eth3
-            gateway: 10.2.0.1
+            #gateway: 10.2.0.1
         roles:
           management: br-mgmt
           neutron/mesh: br-mesh
