--- a/resources/librarian/actions/remove.yaml
+++ b/resources/librarian/actions/remove.yaml
@@ -1,6 +1,6 @@
 - hosts: [{{host}}]
   sudo: yes
   tasks:
-    #XXX: should we remove modules also?
-    - file: path={{config_dir}}/Puppetfile state=absent
+    - file: path={{modules_dir}} state=absent
+    - file: path={{modules_dir}}/../Puppetfile state=absent
     - shell: gem uninstall librarian-puppet
