Use modules_path name

--- a/resources/librarian/actions/run.yaml
+++ b/resources/librarian/actions/run.yaml
@@ -3,8 +3,8 @@
   tasks:
     # XXX: check apt package http://packages.ubuntu.com/trusty/ruby/librarian-puppet
     - shell: gem install librarian-puppet --no-ri --no-rdoc
-    - file: path={{modules_dir}} state=directory
+    - file: path={{modules_path}} state=directory
     - template:
         src={{templates_dir}}/Puppetfile
-        dest={{modules_dir}}/../Puppetfile
-    - shell: librarian-puppet install chdir={{modules_dir}}
+        dest={{modules_path}}/../Puppetfile
+    - shell: librarian-puppet install chdir={{modules_path}}
