--- a/resources/librarian/actions/remove.yaml
+++ b/resources/librarian/actions/remove.yaml
@@ -1,6 +1,6 @@
 - hosts: [{{host}}]
   sudo: yes
   tasks:
-    - file: path={{modules_dir}} state=absent
-    - file: path={{modules_dir}}/../Puppetfile state=absent
+    - file: path={{modules_path}} state=absent
+    - file: path={{modules_path}}/../Puppetfile state=absent
     - shell: gem uninstall librarian-puppet
