Add mos_repos virtual resource and use it for ceph example

--- a/resources/apt_repo/meta.yaml
+++ b/resources/apt_repo/meta.yaml
@@ -18,5 +18,8 @@ input:
         schema: str
         value:
     pin_priority:
-        schema: str
+        schema: int
         value:
+    validate_integrity:
+        schema: bool
+        value: true
