--- a/resources/managed_apt/actions/run.yaml
+++ b/resources/managed_apt/actions/run.yaml
@@ -4,3 +4,4 @@
     - shell: echo 'Managed by solar' > /etc/apt/sources.list
       when: {{ensure_other_removed}}
     - shell: apt-get update
+      when: {{ensure_other_removed}}
