--- a/resources/apt_repo/actions/run.yaml
+++ b/resources/apt_repo/actions/run.yaml
@@ -1,9 +1,11 @@
 - hosts: [{{host}}]
   sudo: yes
   tasks:
-    - apt_repository: repo={{repo}} validate_certs=no
-    - file: path=/etc/apt/preferences.d/{{name}}.pref state=touch
+    - template:
+        src: {{templates_dir}}/source
+        dest: /etc/apt/sources.list.d/{{name}}.list
     - template:
         src: {{templates_dir}}/preferences
         dest: /etc/apt/preferences.d/{{name}}.pref
     - shell: apt-get update
+      when: {{validate_integrity}}
