--- a/examples/librarian/librarian.yaml
+++ b/examples/librarian/librarian.yaml
@@ -1,18 +1,19 @@
 id: librarian_examples
 
 resources:
+  - id: rabbitmq_service1
+    from: resources/rabbitmq_service
+    location: {{node}}
+    values:
+      management_port: 15672
+      port: 5672
+
   - id: librarian
     location: {{node}}
     from: resources/librarian
     values:
-      modules_path: /tmp/x/x/modules
       modules:
-        - name: puppetlabs-ntp
-          version: 4.1.0
-        - name: puppet-keystone
-          type: git
-          url: https://github.com/openstack/puppet-keystone
-          ref: 5.1.0
+        - rabbitmq_service1::module::NO_EVENTS
 
 events:
   - type: depends_on
