--- a/resources/glance_puppet/meta.yaml
+++ b/resources/glance_puppet/meta.yaml
@@ -150,6 +150,9 @@ input:
     db_host:
       schema: str!
       value:
+    db_port:
+      schema: int!
+      value:
 
     keystone_host:
       schema: str!
