--- a/resources/keystone_puppet/meta.yaml
+++ b/resources/keystone_puppet/meta.yaml
@@ -18,6 +18,9 @@ input:
     db_host:
       schema: str!
       value: 
+    db_port:
+      schema: int!
+      value: 
 
     admin_port:
       schema: int!
