--- a/resources/mariadb_service/actions/remove.yaml
+++ b/resources/mariadb_service/actions/remove.yaml
@@ -6,3 +6,4 @@
         name: {{ resource_name }}
         image: {{ image }}
         state: absent
+    - file: path=/var/lib/docker/data/{{resource_name}} state=absent
