--- a/resources/nova_puppet/meta.yaml
+++ b/resources/nova_puppet/meta.yaml
@@ -205,6 +205,9 @@ input:
     db_host:
       schema: str!
       value:
+    db_port:
+      schema: int!
+      value:
 
     keystone_password:
       schema: str!
