--- a/resources/glance_registry_puppet/meta.yaml
+++ b/resources/glance_registry_puppet/meta.yaml
@@ -114,6 +114,9 @@ input:
     db_host:
       schema: str!
       value:
+    db_port:
+      schema: str!
+      value:
 
     keystone_host:
       schema: str!
