--- a/templates/nodes_network.yaml
+++ b/templates/nodes_network.yaml
@@ -3,7 +3,8 @@ id: simple_multinode_gre
 # eth1 - mgmt 10.0.0.0/24,
 # eth3 - ext 10.2.0.0/24
 resources:
-  - id: node1_sdn
+{% for i in range(count|int) %}
+  - id: node{{i}}_sdn
     from: resources/node_network_puppet
     values:
       use_ovs: true
@@ -45,18 +46,18 @@ resources:
         endpoints:
           br-mesh:
             IP:
-            - 10.1.0.3/24
+            - 10.1.0.{{3 + i}}/24
           br-floating:
             IP: none
           br-mgmt:
             IP:
-            - 10.0.0.3/24
+            - 10.0.0.{{3 + i}}/24
             vendor_specific:
               phy_interfaces:
               - eth1
           br-ex:
             IP:
-            - 10.2.0.3/24
+            - 10.2.0.{{3 + i}}/24
             vendor_specific:
               phy_interfaces:
               - eth3
@@ -67,68 +68,4 @@ resources:
           ex: br-ex
           neutron/floating: br-floating
           fw-admin: br-fw-admin
-
-  - id: node2_sdn
-    from: resources/node_network_puppet
-    values:
-      use_ovs: true
-      network_scheme:
-        version: '1.1'
-        provider: lnx
-        interfaces:
-          eth3:
-            mtu: 1500
-          eth1:
-            mtu: 1500
-          eth2:
-            mtu: 9000
-        transformations:
-        - action: add-br
-          name: br-mgmt
-        - action: add-br
-          name: br-ex
-        - action: add-br
-          name: br-floating
-          provider: ovs
-        - action: add-patch
-          bridges:
-          - br-floating
-          - br-ex
-          provider: ovs
-          mtu: 65000
-        - action: add-br
-          name: br-mesh
-        - action: add-port
-          bridge: br-ex
-          name: eth3
-        - action: add-port
-          bridge: br-mgmt
-          name: eth1
-        - action: add-port
-          bridge: br-mesh
-          name: eth2
-        endpoints:
-          br-mesh:
-            IP:
-            - 10.1.0.4/24
-          br-floating:
-            IP: none
-          br-mgmt:
-            IP:
-            - 10.0.0.4/24
-            vendor_specific:
-              phy_interfaces:
-              - eth1
-          br-ex:
-            IP:
-            - 10.2.0.4/24
-            vendor_specific:
-              phy_interfaces:
-              - eth3
-            #gateway: 10.2.0.1
-        roles:
-          management: br-mgmt
-          neutron/mesh: br-mesh
-          ex: br-ex
-          neutron/floating: br-floating
-          fw-admin: br-fw-admin
+{% endfor %}
