--- a/resources/mariadb_service/meta.yaml
+++ b/resources/mariadb_service/meta.yaml
@@ -1,6 +1,9 @@
 id: mariadb_service
 handler: ansible
 version: 1.0.0
+actions:
+    run: run.yaml
+    update: run.yaml
 input:
     image: 
       schema: str!
