--- a/resources/mariadb_user/meta.yaml
+++ b/resources/mariadb_user/meta.yaml
@@ -3,6 +3,7 @@ handler: ansible
 version: 1.0.0
 actions:
     run: run.yaml
+    update: run.yaml
     remove: remove.yaml
 input:
     user_password:
