Add react event for nova_puppet -> nova_compute. Move acctions to meta

--- a/resources/librarian/meta.yaml
+++ b/resources/librarian/meta.yaml
@@ -1,6 +1,10 @@
 id: librarian
 handler: ansible
 version: 0.0.1
+actions:
+    run: run.yaml
+    update: run.yaml
+    remove: remove.yaml
 input:
     modules:
       schema: [str]
