--- a/resources/riak_node/meta.yaml
+++ b/resources/riak_node/meta.yaml
@@ -2,9 +2,9 @@ id: riak_node
 handler: ansible
 version: 1.0.0
 actions:
-  commit: actions/commit.yaml
-  run: actions/run.yaml
-  join: actions/join.yaml
+  commit: commit.yaml
+  run: run.yaml
+  join: join.yaml
 input:
     ip:
       schema: str!
