Get partitioning information from bareon-api

--- a/resources/not_provisioned_node/meta.yaml
+++ b/resources/not_provisioned_node/meta.yaml
@@ -21,5 +21,8 @@ input:
       schema: str!
       value: $uuid
       reverse: True
+    partitioning:
+      schema: dict!
+      value:
 
 tags: [resources=node]
