add repos configuration possibility for bareon

--- a/resources/not_provisioned_node/meta.yaml
+++ b/resources/not_provisioned_node/meta.yaml
@@ -17,6 +17,9 @@ input:
     admin_mac:
       schema: str!
       value:
+    repos:
+      schema: list!
+      value: []
     name:
       schema: str
       value: a node
