Building IBP images on solar 'master' instead of downloading them

--- a/resources/not_provisioned_node/meta.yaml
+++ b/resources/not_provisioned_node/meta.yaml
@@ -11,6 +11,9 @@ input:
     ip:
       schema: str!
       value:
+    master_key:
+      schema: str!
+      value:
     admin_mac:
       schema: str!
       value:
