--- a/templates/keystone_base.yaml
+++ b/templates/keystone_base.yaml
@@ -4,22 +4,22 @@ resources:
   - id: keystone_db
     from: resources/mariadb_db
     values:
-      db_name: '{{db_name}}'
-      db_host: '{{db_host}}'
-      login_user: '{{login_user}}'
-      login_password: '{{login_password}}'
-      login_port: '{{login_port}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      db_name: '#{db_name}#'
+      db_host: '#{db_host}#'
+      login_user: '#{login_user}#'
+      login_password: '#{login_password}#'
+      login_port: '#{login_port}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
 
   - id:  keystone_db_user
     from: resources/mariadb_user
     values:
-      user_password: '{{user_password}}'
-      user_name: '{{user_name}}'
+      user_password: '#{user_password}#'
+      user_name: '#{user_name}#'
       db_name: 'keystone_db::db_name'
-      db_host: '{{db_host}}'
+      db_host: '#{db_host}#'
       login_user: 'keystone_db::login_user'
       login_password: 'keystone_db::login_password'
       login_port: 'keystone_db::login_port'
