--- a/templates/nodes.yaml
+++ b/templates/nodes.yaml
@@ -2,36 +2,36 @@ id: simple_riak_with_transports
 resources:
 #% for i in range(count|int) %#
    #% set j = i +1 %#
-  - id: ssh_transport{{j}}
+  - id: ssh_transport#{j}#
     from: resources/transport_ssh
     values:
       ssh_user: 'vagrant'
-      ssh_key: '/vagrant/.vagrant/machines/solar-dev{{j}}/virtualbox/private_key'
-  - id: rsync{{j}}
+      ssh_key: '/vagrant/.vagrant/machines/solar-dev#{j}#/virtualbox/private_key'
+  - id: rsync#{j}#
     from: resources/transport_rsync
     values:
       user: vagrant
-      key: /vagrant/.vagrant/machines/solar-dev{{j}}/virtualbox/private_key
-  - id: transports{{j}}
+      key: /vagrant/.vagrant/machines/solar-dev#{j}#/virtualbox/private_key
+  - id: transports#{j}#
     from: resources/transports
     values:
       transports:
-        - key: ssh_transport{{j}}::ssh_key
-          user: ssh_transport{{j}}::ssh_user
-          port: ssh_transport{{j}}::ssh_port
-          name: ssh_transport{{j}}::name
-        - key: rsync{{j}}::key
-          name: rsync{{j}}::name
-          user: rsync{{j}}::user
-          port: rsync{{j}}::port
-  - id: node{{j}}
+        - key: ssh_transport#{j}#::ssh_key
+          user: ssh_transport#{j}#::ssh_user
+          port: ssh_transport#{j}#::ssh_port
+          name: ssh_transport#{j}#::name
+        - key: rsync#{j}#::key
+          name: rsync#{j}#::name
+          user: rsync#{j}#::user
+          port: rsync#{j}#::port
+  - id: node#{j}#
     from: resources/ro_node
     values:
-      name: node{{j}}
-      ip: '10.0.0.{{i + 3}}'
-      transports_id: transports{{j}}::transports_id
-  - id: hosts_file{{j}}
+      name: node#{j}#
+      ip: '10.0.0.#{i + 3}#'
+      transports_id: transports#{j}#::transports_id
+  - id: hosts_file#{j}#
     from: resources/hosts_file
-    location: node{{j}}
-    tags: ['location=node{{j}}']
+    location: node#{j}#
+    tags: ['location=node#{j}#']
 #% endfor %#
