--- a/templates/nodes_with_transports.yaml
+++ b/templates/nodes_with_transports.yaml
@@ -1,32 +1,32 @@
 id: simple_multinode_with_transports
 resources:
 #% for i in range(count|int) %#
-  - id: ssh_transport{{i}}
+  - id: ssh_transport#{i}#
     from: resources/transport_ssh
     values:
       ssh_user: 'vagrant'
-      ssh_key: '/vagrant/.vagrant/machines/solar-dev{{i + 1}}/virtualbox/private_key'
-  - id: rsync{{i}}
+      ssh_key: '/vagrant/.vagrant/machines/solar-dev#{i + 1}#/virtualbox/private_key'
+  - id: rsync#{i}#
     from: resources/transport_rsync
     values:
       user: vagrant
-      key: /vagrant/.vagrant/machines/solar-dev{{i + 1}}/virtualbox/private_key
-  - id: transports{{i}}
+      key: /vagrant/.vagrant/machines/solar-dev#{i + 1}#/virtualbox/private_key
+  - id: transports#{i}#
     from: resources/transports
     values:
       transports:
-        - key: ssh_transport{{i}}::ssh_key
-          user: ssh_transport{{i}}::ssh_user
-          port: ssh_transport{{i}}::ssh_port
-          name: ssh_transport{{i}}::name
-        - key: rsync{{i}}::key
-          name: rsync{{i}}::name
-          user: rsync{{i}}::user
-          port: rsync{{i}}::port
-  - id: node{{i}}
+        - key: ssh_transport#{i}#::ssh_key
+          user: ssh_transport#{i}#::ssh_user
+          port: ssh_transport#{i}#::ssh_port
+          name: ssh_transport#{i}#::name
+        - key: rsync#{i}#::key
+          name: rsync#{i}#::name
+          user: rsync#{i}#::user
+          port: rsync#{i}#::port
+  - id: node#{i}#
     from: resources/ro_node
     values:
-      ip: '10.0.0.{{i + 3}}'
-      transports_id: transports{{i}}::transports_id
-      name: node{{i}}
+      ip: '10.0.0.#{i + 3}#'
+      transports_id: transports#{i}#::transports_id
+      name: node#{i}#
 #% endfor %#
