--- a/templates/openstack_base.yaml
+++ b/templates/openstack_base.yaml
@@ -5,12 +5,12 @@ resources:
     from: resources/keystone_tenant
     values:
       tenant_name: admin
-      keystone_port: '{{keystone_admin_port}}'
-      keystone_host: '{{keystone_ip}}'
-      admin_token: '{{admin_token}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      keystone_port: '#{keystone_admin_port}#'
+      keystone_host: '#{keystone_ip}#'
+      admin_token: '#{admin_token}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
 
   - id: admin_user
     from: resources/keystone_user
@@ -18,12 +18,12 @@ resources:
       user_name: 'admin'
       user_password: 'admin'
       tenant_name: 'admin_tenant::tenant_name'
-      keystone_port: '{{keystone_admin_port}}'
-      keystone_host: '{{keystone_ip}}'
-      admin_token: '{{admin_token}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      keystone_port: '#{keystone_admin_port}#'
+      keystone_host: '#{keystone_ip}#'
+      admin_token: '#{admin_token}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
 
   - id: admin_role
     from: resources/keystone_role
@@ -31,44 +31,44 @@ resources:
       role_name: 'admin'
       user_name: 'admin_user::user_name'
       tenant_name: 'admin_user::tenant_name'
-      keystone_port: '{{keystone_admin_port}}'
-      keystone_host: '{{keystone_ip}}'
-      admin_token: '{{admin_token}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      keystone_port: '#{keystone_admin_port}#'
+      keystone_host: '#{keystone_ip}#'
+      admin_token: '#{admin_token}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
 
   - id: keystone_service_endpoint
     from: resources/keystone_service_endpoint
     values:
      #% raw %#
-      adminurl: 'http://{{admin_ip}}:{{admin_port}}/v2.0'
-      internalurl: 'http://{{internal_ip}}:{{internal_port}}/v2.0'
-      publicurl: 'http://{{public_ip}}:{{public_port}}/v2.0'
+      adminurl: 'http://#{admin_ip}#:#{admin_port}#/v2.0'
+      internalurl: 'http://#{internal_ip}#:#{internal_port}#/v2.0'
+      publicurl: 'http://#{public_ip}#:#{public_port}#/v2.0'
      #% endraw %#
       description: 'OpenStack Identity Service'
       type: 'identity'
       endpoint_name: 'keystone'
-      admin_port: '{{keystone_admin_port}}'
-      public_port: '{{keystone_port}}'
-      internal_port: '{{keystone_port}}'
-      admin_ip: '{{ip}}'
-      public_ip: '{{ip}}'
-      internal_ip: '{{ip}}'
-      keystone_admin_port: '{{keystone_admin_port}}'
-      keystone_host: '{{keystone_ip}}'
-      admin_token: '{{admin_token}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      admin_port: '#{keystone_admin_port}#'
+      public_port: '#{keystone_port}#'
+      internal_port: '#{keystone_port}#'
+      admin_ip: '#{ip}#'
+      public_ip: '#{ip}#'
+      internal_ip: '#{ip}#'
+      keystone_admin_port: '#{keystone_admin_port}#'
+      keystone_host: '#{keystone_ip}#'
+      admin_token: '#{admin_token}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
 
   - id: service_tenant
     from: resources/keystone_tenant
     values:
       tenant_name: services
-      keystone_port: '{{keystone_admin_port}}'
-      keystone_host: '{{keystone_ip}}'
-      admin_token: '{{admin_token}}'
-      ip: '{{ip}}'
-      ssh_user: '{{ssh_user}}'
-      ssh_key: '{{ssh_key}}'
+      keystone_port: '#{keystone_admin_port}#'
+      keystone_host: '#{keystone_ip}#'
+      admin_token: '#{admin_token}#'
+      ip: '#{ip}#'
+      ssh_user: '#{ssh_user}#'
+      ssh_key: '#{ssh_key}#'
