--- a/templates/glance/1.0.0/glance.yaml
+++ b/templates/glance/1.0.0/glance.yaml
@@ -2,7 +2,7 @@ id: glance_#{idx}#
 
 resources:
   - id: glance_base_#{ idx }#
-    from: templates/glance_db.yaml
+    from: templates/glance_db
     values:
       idx: '#{ idx }#'
 
