--- a/templates/controller/1.0.0/controller.yaml
+++ b/templates/controller/1.0.0/controller.yaml
@@ -19,7 +19,7 @@ resources:
       ssh_key: '#{ssh_key}#'
 
   - id: keystone_base
-    from: templates/keystone_base.yaml
+    from: templates/keystone_base
     values:
       login_user: root
       login_password: 'mariadb_service::root_password'
@@ -33,7 +33,7 @@ resources:
       ssh_key: '#{ssh_key}#'
 
   - id:  keystone_api_1
-    from: templates/keystone_api.yaml
+    from: templates/keystone_api
     values:
       idx: 1
       db_password: 'keystone_db_user::user_password'
@@ -49,7 +49,7 @@ resources:
       ssh_key: '#{ssh_key}#'
 
   - id: openstack_base
-    from: templates/openstack_base.yaml
+    from: templates/openstack_base
     values:
       ip: '#{ip}#'
       ssh_user: '#{ssh_user}#'
